--- a/frontend/src/chatbot.html
+++ b/frontend/src/chatbot.html
@@ -1,8 +1,10 @@
 <div class="chatbot-window">
-  <div class="chatbot-header">AI Chatbot</div>
+  <div class="chatbot-header">Ask Me Anything</div>
   <div class="chatbot-messages" id="chatbot-messages"></div>
   <div class="chatbot-input">
     <input type="text" id="chatbot-input" placeholder="Type a message..." />
-    <button id="chatbot-send">Send</button>
-  </div>
+    <button id="chatbot-send">
+        <span class="material-icons">send</span>
+    </button>
+</div>
 </div>
