moved chatbot html and css to public

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>AI Chatbot</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="./styles/chatbot.css" />
+  <link rel="stylesheet" href="/styles/chatbot.css" />
 </head>
 <body>
   <div id="chatbot-container"></div>
